--- a/templates/partials/adminNav.hbs
+++ b/templates/partials/adminNav.hbs
@@ -13,6 +13,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/viewAllMembers">Members</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/adminContact">Messages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/adminOrdersView">Orders</a>
+        </li>
         
       </ul>
          {{#if user}}
