--- a/templates/partials/banner.hbs
+++ b/templates/partials/banner.hbs
@@ -39,7 +39,7 @@
   font-weight: 400;
   font-style: normal;
   opacity: .8;
-  color: var(--main-white);
+  color: rgb(255, 255, 255);
 }
 
 .image-layer {
@@ -83,7 +83,7 @@
   left: 0;
   width: 100%;
   height: 90vh;
-  background-color: rgba(var(--mell-black-rgb), 0.6);
+  background-color: rgba(var(--mell-black-rgb), 0.3);
   z-index: 1;
 }
  .slide-image {
@@ -97,7 +97,7 @@
 </style>
 <section class="main-slider" id="home">
         <div class="image-layer ">
-           <div class="slide-image slide-media" style="background-image:url('//minion-vinovatheme.myshopify.com/cdn/shop/files/slideshow-3_8d153831-1053-4b01-9846-85b389bc650a_1920x950.jpg?v=1617703716');">  </div> 
+           <div class="slide-image slide-media" style="background-image:url('//minion-vinovatheme.myshopify.com/cdn/shop/files/slideshow-1_dde76e74-65ca-488e-856f-5c4003a84032_2048x.jpg?v=1616753963');">  </div> 
             <div class="overlay"></div>
         </div>
         <div class="container max-width">
