--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -19,5 +19,5 @@
   }
 </style>
 <footer>
-    <span>Created By <a href="#about">GarbHaven Team </a> © 2024 all rights reserved.</span>
+    <span>Created By <a href="/aboutus">GarbHaven Team </a> © 2024 all rights reserved.</span>
   </footer>
