--- a/templates/views/admin.hbs
+++ b/templates/views/admin.hbs
@@ -1,4 +1,9 @@
 {{>adminNav}}
+<style>
+  .tableDiv {
+    margin: 10px 372px;
+  }
+</style>
 <form action="/adminLogin" method="post" class="tableDiv mb-4">
 <h1>Admin Login</h1>
     <div class="mb-3 col-auto">
