--- a/templates/views/adminEditProduct.hbs
+++ b/templates/views/adminEditProduct.hbs
@@ -32,7 +32,7 @@
         <input type="text" name="image" value="{{product.image}}" class="form-control" id="image" />
     </div>
 
-    <button type="submit" class="btn btn-success" style="margin-bottom: 5px;">Update</button>
+    <button type="submit" class="btn btn-dark" style="margin-bottom: 5px;">Update</button>
 
     {{!-- <a href="/viewall" class="btn btn-primary">View All</a> --}}
 </form>
