--- a/templates/views/orders.hbs
+++ b/templates/views/orders.hbs
@@ -8,7 +8,7 @@
     <title>eSewa Payment</title>
 </head>
 <body>
-   <form id="esewa-payment-form" action="https://rc-epay.esewa.com.np/api/epay/main/v2/form" method="POST">
+   {{!-- <form id="esewa-payment-form" action="https://rc-epay.esewa.com.np/api/epay/main/v2/form" method="POST">
         <input type="hidden" name="amount" value="{{ totalAmount }}">
         <input type="hidden" name="tax_amount" value="0">
         <input type="hidden" name="total_amount" value="{{ totalAmount }}">
@@ -26,6 +26,6 @@
     <script>
         // Submit the eSewa payment form when the page loads
         document.getElementById('esewa-payment-form').submit();
-    </script>
+    </script> --}}
 </body>
 </html>
