--- a/templates/views/addProduct.hbs
+++ b/templates/views/addProduct.hbs
@@ -20,7 +20,7 @@
 </div>
 
 
-    <button type="submit" class="btn btn-success" style="margin-bottom: 5px;">Add</button>
+    <button type="submit" class="btn btn-dark" style="margin-bottom: 5px;">Add</button>
 
     {{!-- <a href="/viewall" class="btn btn-primary">View All</a> --}}
 
