--- a/templates/views/adminSignup.hbs
+++ b/templates/views/adminSignup.hbs
@@ -34,6 +34,6 @@
         <label  class="phone-label">Phone</label>
          <input type="number" class="form-control" name="phone" id="exampleInputNumber">
         </div> 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-dark">Submit</button>
     </form>
 </body>
