--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,6 +2,7 @@
 {{>navbar}}
 
 <style>
+    
     .product-card {
       border: 1px solid #ddd;
       border-radius: 8px;
@@ -14,11 +15,14 @@
     }
    
 </style>    
+
 {{>banner}}
+
+
 <div class="product-area section">
     <div class="container">
         <div class="row">
-            <h1 style="text-align: center " class="mt-3">All Products</h1>
+            <h1 style="text-align: center; " class="mt-3">All Products</h1>
             {{#each products}}
                 <div class="col-xl-3 col-lg-4 col-md-4 col-12">
                     <div class="single-product" >
