--- a/templates/views/loginPage.hbs
+++ b/templates/views/loginPage.hbs
@@ -2,7 +2,7 @@
 <body>
     {{>navbar}}
 
-     <form action="/loginPage" method="post" class="tableDiv mb-4">
+     <form action="/loginPage" method="post" class="login-tableDiv mb-4">
     <div class="mb-3 col-auto">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp">
