--- a/templates/views/product-details.hbs
+++ b/templates/views/product-details.hbs
@@ -6,7 +6,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 50px;
+           
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
             border: 1px solid #ddd; 
             padding: 20px;
@@ -18,6 +18,7 @@
             height: 450px;
             margin-right: 50px;
             margin-bottom: 200px;
+            margin-top: 100px;
         }
 
         .product-details {
@@ -58,7 +59,7 @@
         .paypal-button-container{
             margin-top: 10px;
         }
-        /* Custom CSS to override Bootstrap button padding */
+       
             .custom-btn-padding {
                 margin-bottom: 10px;
             --bs-btn-padding-x: 9.2rem; 
@@ -76,7 +77,7 @@
         <p class="product-price">Rs {{ product.price }}</p>
         <button onclick="addToCart('{{ product._id }}')" class="btn btn-dark btn-lg btn-block custom-btn-padding">Add to Cart</button>
         <!-- "Buy Now" button -->
-        <div id="paypal-button-container"></div>
+        {{!-- <div id="paypal-button-container"></div> --}}
         <p>Product description:</p>
         <p class="product-desc">{{ product.description }}</p>
     </div>
@@ -118,7 +119,7 @@
             return actions.order.create({
                 purchase_units: [{
                     amount: {
-                        currency_code: 'USD', // Set currency code to NRP
+                        currency_code: 'USD', 
                         value: '{{ product.price }}' // Use the product price here
                     }
                 }]
